hard-gists/5048588/run.log
=== Docker Run Log for 5048588 ===
Started at: Mi 29. Okt 15:19:59 CET 2025

[2025-10-29 15:19:59] START: Running container for 5048588
[2025-10-29 15:19:59] SUCCESS: Container b829b1a2a85f20614a1b14273bf964e697f74dde0722acaf8d54af5fed803490 started for 5048588
=== Container logs for 5048588 ===
  File "/snippet.py", line 23
    print 'Downloading evernote...'
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5048588 ===
[2025-10-29 15:20:01] INFO: Container b829b1a2a85f20614a1b14273bf964e697f74dde0722acaf8d54af5fed803490 has stopped
